fix scrollbar in the middle of the screen on widescreen monitors

--- a/src/app/features/board/board.scss
+++ b/src/app/features/board/board.scss
@@ -1,6 +1,6 @@
 .board-container {
   height: 100%;
-  max-width: 1688px;
+  // max-width: 1688px;
   overflow-x: auto;
 }
 
